admin-dashboard user list and order list

--- a/FE/Admin/admin-dashboard/sidebar.html
+++ b/FE/Admin/admin-dashboard/sidebar.html
@@ -45,11 +45,11 @@
 											</g>
 										</svg>
 									</span>
-									<span class="menu-bar__name">Customers</span></span> <span class="sherah__toggle"></span></a></span>
+									<span class="menu-bar__name">Users</span></span> <span class="sherah__toggle"></span></a></span>
 									<!-- Dropdown Menu -->
 									<div class="collapse sherah__dropdown" id="menu-item__customers"  data-bs-parent="#sherahMenu">
 										<ul class="menu-bar__one-dropdown">
-											<li><a href='customer-list.html'><span class="menu-bar__text"><span class="menu-bar__name">Customer List</span></span></a></li>
+											<li><a href='customer-list.html'><span class="menu-bar__text"><span class="menu-bar__name">Users List</span></span></a></li>
 										  </ul>
 									</div>
 								</li>
