--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
@@ -34,32 +34,9 @@
 	<!-- ==========================-->
 	<!-- SEARCH MODAL-->
 	<!-- ==========================-->
-	<div class="header-search open-search">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-					<div class="navbar-search">
-						<form class="search-global">
-							<input class="search-global__input" type="text" placeholder="Type to search"
-								autocomplete="off" name="s" value="" />
-							<button class="search-global__btn"><i class="icon stroke icon-Search"></i>
-							</button>
-							<div class="search-global__note">Begin typing your search above and press return to search.
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-		<button class="search-close close" type="button"><i class="fa fa-times"></i></button>
-	</div>
 
-	<div class="top-bar" id="top_bar">
-		<div class="container">
-			<p class="font-14-ope-reg-0 text-center margin-0">…Enjoy 20% off when you sign up to become a member...</p>
-			<i class="ion-ios-close-empty"></i>
-		</div><!-- /.container -->
-	</div><!-- /.top-bar -->
+
+
 
 	<div id="header-placeholder"></div>
 
@@ -83,8 +60,8 @@
 
 	<div class="container">
 		<ol class="breadcrumb underline">
-			<li><a href="#">Home</a></li>
-			<li>SHOPPING CART</li>
+			<li><a href="index.html">Trang chủ</a></li>
+			<li>Giỏ hàng</li>
 		</ol><!-- /.breadcrumb -->
 	</div><!-- /.container -->
 
@@ -186,7 +163,7 @@
 
 	<div class="cart-setp">
 		<div class="container">
-			<figure><img src="../assets/dist/img/cart/cart-step.png" class="img-responsive" alt="" /></figure>
+			<figure><img src="../assets/dist/img/cart/Designer.png" class="img-responsive" alt="" /></figure>
 		</div>
 	</div><!-- /.cart-setp -->
 
@@ -197,152 +174,134 @@
 			<div class="row">
 				<div class="col-sm-8">
 					<div class="shopping-bag">
-						<h4 class="one">Shopping Bag</h4>
+						<h4 class="one">Giỏ hàng của bạn</h4>
 						<div class="diva short-dress">
 							<img src="../assets/dist/img/cart/1.jpg" alt="1" />
-							<h5 class="font-30-for-reg-0">Short Diva Dress</h5>
-							<p class="color">Brand : <span>Blue Flamingo</span></p>
-							<p>Code : <span>1834A</span></p>
-							<p>Price : <span>$50</span></p>
+							<h5 class="font-30-for-reg-0">Váy Dạ Hội Diva Ngắn</h5>
+							<p class="color">Thương hiệu : <span>Blue Flamingo</span></p>
+							<p>Mã SP : <span>1834A</span></p>
+							<p>Giá : <span>$50</span></p>
 							<p>Size : <span>L</span></p>
-							<p>Color : <span>Sweet Pink</span></p>
-							<p>Delivery Date : <span>25 Feb 2017</span></p>
-							<p>Return Date : <span>19 Feb 2017</span></p>
-							<p>Rent For : <span>4 days</span></p>
-							<button><i class="ion-edit"></i> Edit</button>
-						</div><!-- /.short-dress -->
-						<a href="#" class="btn continue">Continue Shopping</a>
-						<a href="#" class="btn update">Update Busket</a>
+							<p>Màu : <span>Hồng Ngọt Ngào</span></p>
+							<p>Ngày nhận : <span>25/02/2017</span></p>
+							<p>Ngày trả : <span>19/02/2017</span></p>
+							<p>Thời gian thuê : <span>4 ngày</span></p>
+							<button><i class="ion-edit"></i> Chỉnh sửa</button>
+						</div><a href="#" class="btn continue">Tiếp tục mua sắm</a>
+						<a href="#" class="btn update">Cập nhật giỏ hàng</a>
 
-						<h4 class="two">Delivery Address</h4>
+						<h4 class="two">Địa chỉ giao hàng</h4>
 						<div class="diva delivery-address">
-							<form class="form-inline">
-								<div class="form-group">
-									<label class="sr-only">Email address</label>
-									<input type="email" class="form-control" placeholder="Email" />
-								</div>
-								<div class="form-group">
-									<label class="sr-only">Password</label>
-									<input type="password" class="form-control" placeholder="Password" />
-								</div>
-								<button type="submit" class="btn rq-submit">Sign in</button>
-							</form><!-- /.form-inline -->
-							<h6 class="divider"><span>or</span></h6><!-- /.divider -->
-							<form class="form-horizontal">
+														<form class="form-horizontal">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>First Name</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Họ & Tên đệm</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Last Name</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Tên</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Email address</p>
+											<p>Địa chỉ Email</p>
 											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Mobile No.</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Số điện thoại</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-12">
 										<div class="inner-form">
-											<p>Street Address</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-12 -->
+											<p>Địa chỉ nhận hàng</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Postl Code</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Mã bưu chính (Zip Code)</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>City</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Thành phố</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Country</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Quốc gia</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>State</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
-								</div><!-- /.row -->
-							</form><!-- form-horizontal -->
-
-						</div><!-- /.delivery-address -->
-
-						<h4 class="three">Payment Method</h4>
+											<p>Tỉnh / Thành</p>
+											<input type="text" class="form-control" />
+										</div>
+									</div>
+								</div>
+							</form>
+						</div>
+						<h4 class="three">Phương thức thanh toán</h4>
 						<div class="diva delivery-address payment-method">
-							<h4 class="font-30-for-reg-0">Select the preferred payment method</h4>
+							<h4 class="font-30-for-reg-0">Chọn phương thức thanh toán</h4>
 							<form class="form-horizontal">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="inner-form">
-											<p>Pay with credit card</p>
-											<input type="email" class="form-control" />
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-6 -->
+											<p>Thanh toán qua thẻ tín dụng</p>
+											<input type="text" class="form-control" placeholder="Số thẻ..." />
+										</div>
+									</div>
 									<div class="col-sm-12">
 										<div class="inner-form">
-											<p>Pay with credit card</p>
+											<p>Ghi chú thêm</p>
 											<textarea rows="6"></textarea>
-										</div><!-- /.inner-form -->
-									</div><!-- /.col-sm-12 -->
-								</div><!-- /.row -->
-							</form><!-- form-horizontal -->
-						</div><!-- /.payment-method -->
-						<button type="submit" class="btn btn-blog">Proceed To Order</button>
-					</div><!-- /.shopping-bag -->
-				</div><!-- /.col-sm-8 -->
+										</div>
+									</div>
+								</div>
+							</form>
+						</div><button type="submit" class="btn btn-blog">Tiến hành đặt hàng</button>
+					</div>
+				</div>
 				<div class="col-sm-4">
 					<div class="fixedElement">
 						<div class="discount ">
 							<div class="flex discount1">
-								<input type="text" placeholder="Discount Code" />
-								<button>Apply</button>
-							</div><!-- /.flex -->
+								<input type="text" placeholder="Mã giảm giá" />
+								<button>Áp dụng</button>
+							</div>
 							<div class="flex">
-								<p>Sub Total :</p>
+								<p>Tạm tính :</p>
 								<span>$50</span>
-							</div><!-- /.flex -->
+							</div>
 							<div class="flex">
-								<p class="color">Promotional Savings :</p>
+								<p class="color">Khuyến mãi :</p>
 								<span class="color">-$0.0</span>
-							</div><!-- /.flex -->
+							</div>
 							<div class="flex bar">
-								<p>Shipping Cost :</p>
+								<p>Phí vận chuyển :</p>
 								<span>-$0.0</span>
-							</div><!-- /.flex -->
+							</div>
 							<div class="flex ">
-								<h4>TOTAL :</h4>
+								<h4>TỔNG CỘNG :</h4>
 								<h4>$50</h4>
-							</div><!-- /.flex -->
-
-						</div><!-- /.discount -->
-						<button type="submit" class="btn btn-blog">Proceed To Order</button>
-					</div><!-- /.fixedElement	 -->
-				</div><!-- /.col-sm-4 -->
-			</div><!-- /.row -->
-		</div><!-- /.container -->
-	</div><!-- /.shopping-details -->
+							</div>
+						</div><button type="submit" class="btn btn-blog">Tiến hành đặt hàng</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
