--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
@@ -1,76 +1,65 @@
 <footer class="main-footer">
-	<div class="footer"> 
-		<div class="rq-container"> 
-			<div class="item1">
-				<a href="index-2.html" class="font-36-pla-reg-2"><img src="../assets/dist/img/logo.png" alt="logo" /></a>
-				<p>The very best thing about placing an order with Glam Corner is the option to add a “backup dress” for $15. Basically, this means you are delivered two dresses and just leave the tag on the one you don’t decide to wear. For me, this took a lot of the stress out of my first renting experience.</p>
-				<div class="get-touch">
-					<ul class="list-unstyled">
-						<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-					</ul>
-				</div><!-- /.get-touch -->
-			</div><!-- /.item1 -->
-			<div class="item2">
-				<h3 class="font-18-pla-reg-2">GET HELP</h3>
-				<ul class="list-unstyled">
-					<li><a href="#">How it works</a></li>
-					<li><a href="#">Delivery & Return</a></li>
-					<li><a href="#">FAQs</a></li> 
-					<li><a href="#">Terms & Conditions</a></li> 
-					<li><a href="#">Size & Fits</a></li>
-				</ul>
-			</div><!-- /.item2 -->
-			<div class="item3">
-				<h3 class="font-18-pla-reg-2">SERVICES</h3>
-				<ul class="list-unstyled">
-					<li><a href="#">Booking</a></li>
-					<li><a href="#">Renting</a></li>
-					<li><a href="#">Retail</a></li>
-					<li><a href="#">Listing</a></li>
-				</ul>
-			</div><!-- /.item3 -->
-			<div class="item4">
-				<h3 class="font-18-pla-reg-2">COMPANY</h3>
-				<ul class="list-unstyled">
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Book Your Dress</a></li>
-					<li><a href="#">Recent Posts</a></li>
-					<li><a href="#">Gallery</a></li>
-				</ul>
-			</div><!-- /.item4 -->
-			<div class="item5">
-				<h3 class="font-18-pla-reg-2">CONTACT </h3>
-				<ul class="list-unstyled contact">
-					<li class="map-marker"><p>Road 3, West side</p>
-						<p>Texas, USA</p></li>
-					<li class="phone"><p>+6789870352</p></li>
-					<li class="mobile"><p>+67800017338829</p></li>
-					<li class="envelope"><p>rnb@rnb.com</p></li>
-				</ul>
-			</div><!-- /.item5 -->
-			<div class="item6">
-				<h3 class="font-18-pla-reg-2">NEWSLETTER</h3>
-				<p>Sign up for latest updates and offer.</p>
-				<form>
-	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Enter email address...">
-	          <button type="submit" class="btn"><i class="ion-ios-arrow-thin-right"></i></button>
-	        </div>
-	        
-	      </form>
-				<div class="payment">
-					<a href="#"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a>
-				</div><!-- /.payment -->
-			</div><!-- /.item6 -->
-		</div><!-- /.rq-container -->
-	</div><!-- /.footer -->	
-	<div class="bottom-bar">
-		<p>Copyright 2016 &copy; <a href="#">DRESS RENTAL</a></p>
-	</div><!-- /.bottom-bar -->
-</footer>
+    <div class="footer"> 
+        <div class="rq-container"> 
+            <div class="item1">
+                <a href="index-2.html" class="font-36-pla-reg-2"><img src="../assets/dist/img/logo.png" alt="logo" /></a>
+                <p>Điều tuyệt vời nhất khi đặt hàng tại Glam Corner là tùy chọn thêm "chiếc váy dự phòng" với giá 15$. Về cơ bản, bạn sẽ nhận được hai chiếc váy và chỉ cần giữ nguyên tem trên chiếc bạn quyết định không mặc. Điều này giúp tôi giảm bớt rất nhiều áp lực trong lần thuê đồ đầu tiên.</p>
+                <div class="get-touch">
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div></div><div class="item2">
+                <h3 class="font-18-pla-reg-2">HỖ TRỢ</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Cách thức hoạt động</a></li>
+                    <li><a href="#">Giao hàng & Đổi trả</a></li>
+                    <li><a href="#">Câu hỏi thường gặp (FAQs)</a></li> 
+                    <li><a href="#">Điều khoản & Điều kiện</a></li> 
+                    <li><a href="#">Hướng dẫn chọn size</a></li>
+                </ul>
+            </div><div class="item3">
+                <h3 class="font-18-pla-reg-2">DỊCH VỤ</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Đặt lịch</a></li>
+                    <li><a href="#">Thuê đồ</a></li>
+                    <li><a href="#">Bán lẻ</a></li>
+                    <li><a href="#">Danh sách sản phẩm</a></li>
+                </ul>
+            </div><div class="item4">
+                <h3 class="font-18-pla-reg-2">CÔNG TY</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Về chúng tôi</a></li>
+                    <li><a href="#">Đặt váy ngay</a></li>
+                    <li><a href="#">Bài viết gần đây</a></li>
+                    <li><a href="#">Thư viện ảnh</a></li>
+                </ul>
+            </div><div class="item5">
+                <h3 class="font-18-pla-reg-2">LIÊN HỆ</h3>
+                <ul class="list-unstyled contact">
+                    <li class="map-marker"><p>Số 123, Đường ABC</p>
+                        <p>Hà Nội, Việt Nam</p></li>
+                    <li class="phone"><p>+84 987 654 321</p></li>
+                    <li class="mobile"><p>+84 243 000 111</p></li>
+                    <li class="envelope"><p>support@dressrental.com</p></li>
+                </ul>
+            </div><div class="item6">
+                <h3 class="font-18-pla-reg-2">BẢN TIN</h3>
+                <p>Đăng ký để nhận những cập nhật và ưu đãi mới nhất.</p>
+                <form>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Nhập địa chỉ email...">
+              <button type="submit" class="btn"><i class="ion-ios-arrow-thin-right"></i></button>
+            </div>
+            
+          </form>
+                <div class="payment">
+                    <a href="#"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a>
+                </div></div></div></div><div class="bottom-bar">
+        <p>Bản quyền 2024 &copy; thuộc về <a href="#">DRESS RENTAL</a></p>
+    </div></footer>
