update again login&register

--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
@@ -62,4 +62,5 @@
                     <a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a>
                 </div></div></div></div><div class="bottom-bar">
         <p>Bản quyền 2024 &copy; thuộc về <a href="#">DRESS RENTAL</a></p>
-    </div></footer>
+    </div>
+</footer>
