--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/booking.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/booking.html
@@ -51,6 +51,7 @@
 			})
 			.then(data => {
 				document.getElementById('header-placeholder').innerHTML = data;
+				if (typeof renderAuthHeader === "function") renderAuthHeader();
 			})
 			.catch(error => {
 				console.error('Lỗi khi tải header:', error);
@@ -721,6 +722,8 @@
 	<script src="../assets/dist/js/vendor/lightbox.min.js"></script>
 	<script src="../assets/dist/js/vendor/jquery.smooth-scroll.js"></script>
 	<script src="../assets/dist/js/custom.js"></script>
+	<script src="../assets/dist/js/auth-header.js"></script>
+    <script src="../assets/dist/js/layout.js"></script>
 </body>
 
 <!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/booking.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:38 GMT -->
