--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
@@ -15,6 +15,10 @@
 	<link rel="stylesheet" href="../assets/dist/style/header.css">
 	<link rel="stylesheet" href="../assets/dist/style/footer.css">
 	<link rel="stylesheet" href="../assets/dist/style/blog.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/dist/style/style.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
 </head>
 
 <body>
