--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
@@ -6,8 +6,13 @@
   <title>Đăng ký</title>
 
   <link rel="stylesheet" href="../assets/dist/style/elements.css">
-  <link rel="stylesheet" href="../assets/dist/style/header.css">
-  <link rel="stylesheet" href="../assets/dist/style/footer.css">
+	<link rel="stylesheet" href="../assets/dist/style/header.css">
+	<link rel="stylesheet" href="../assets/dist/style/footer.css">
+	<link rel="stylesheet" href="../assets/dist/style/blog.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/dist/style/style.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
 
   <style>
     .auth-wrap{min-height:60vh;display:flex;align-items:center;justify-content:center;padding:50px 16px;}
