--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/cart.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="../assets/dist/style/style.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 </head>
 
 <body>
@@ -197,7 +199,7 @@
 
 						<h4 class="two">Địa chỉ giao hàng</h4>
 						<div class="diva delivery-address">
-														<form class="form-horizontal">
+							<form class="form-horizontal">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="inner-form">
@@ -354,7 +356,7 @@
 	<script src="../assets/dist/js/vendor/jquery.smooth-scroll.js"></script>
 	<script src="../assets/dist/js/custom.js"></script>
 	<script src="../assets/dist/js/auth-header.js"></script>
-    <script src="../assets/dist/js/layout.js"></script>
+	<script src="../assets/dist/js/layout.js"></script>
 </body>
 
 <!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:34 GMT -->
