--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/index.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/index.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="../assets/dist/style/style.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 </head>
 
 <body>
@@ -721,7 +723,7 @@
 	<script src="../assets/dist/js/vendor/lightbox.min.js"></script>
 	<script src="../assets/dist/js/vendor/jquery.smooth-scroll.js"></script>
 	<script src="../assets/dist/js/custom.js"></script>
-    <script src="../assets/dist/js/auth-header.js"></script>
+	<script src="../assets/dist/js/auth-header.js"></script>
 </body>
 
 <!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:20 GMT -->
