--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/listing-page.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/listing-page.html
@@ -19,9 +19,9 @@
 	<link rel="stylesheet" href="../assets/dist/style/style.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
-	<link rel="stylesheet" href="wpdemo.redq.io/sites/dress-rental/assets/dist/style/style.css">
-	<link rel="stylesheet" href="wpdemo.redq.io/sites/dress-rental/assets/dist/style/responsive.css">
-	<link rel="stylesheet" href="wpdemo.redq.io/sites/dress-rental/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
+	
 
 </head>
 
