--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
@@ -1,31 +1,99 @@
 <!doctype html>
 <html lang="vi">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Đăng ký</title>
 
   <link rel="stylesheet" href="../assets/dist/style/elements.css">
-	<link rel="stylesheet" href="../assets/dist/style/header.css">
-	<link rel="stylesheet" href="../assets/dist/style/footer.css">
-	<link rel="stylesheet" href="../assets/dist/style/blog.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../assets/dist/style/style.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
+  <link rel="stylesheet" href="../assets/dist/style/header.css">
+  <link rel="stylesheet" href="../assets/dist/style/footer.css">
+  <link rel="stylesheet" href="../assets/dist/style/blog.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../assets/dist/style/style.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../assets/dist/style/responsive.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 
   <style>
-    .auth-wrap{min-height:60vh;display:flex;align-items:center;justify-content:center;padding:50px 16px;}
-    .auth-card{width:460px;max-width:100%;background:#fff;border:1px solid #eee;border-radius:14px;padding:22px;box-shadow:0 10px 30px rgba(0,0,0,.08);}
-    .auth-switch{display:flex;gap:10px;margin-bottom:14px;}
-    .auth-switch a{flex:1;text-align:center;padding:10px 12px;border:1px solid #ddd;border-radius:10px;text-decoration:none;color:#333;}
-    .auth-switch a.active{border-color:#333;font-weight:600;}
-    .auth-form{display:flex;flex-direction:column;gap:12px;}
-    .auth-form input,.auth-form select{padding:12px;border:1px solid #ddd;border-radius:10px;outline:none;}
-    .auth-form button{padding:12px;border:0;border-radius:10px;cursor:pointer;}
-    .auth-msg{margin:6px 0 0;font-size:14px;}
-    .two-col{display:grid;grid-template-columns:1fr 1fr;gap:12px;}
-    @media(max-width:520px){.two-col{grid-template-columns:1fr;}}
+    .auth-wrap {
+      min-height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 50px 16px;
+    }
+
+    .auth-card {
+      width: 460px;
+      max-width: 100%;
+      background: #fff;
+      border: 1px solid #eee;
+      border-radius: 14px;
+      padding: 22px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, .08);
+    }
+
+    .auth-switch {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 14px;
+    }
+
+    .auth-switch a {
+      flex: 1;
+      text-align: center;
+      padding: 10px 12px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      text-decoration: none;
+      color: #333;
+    }
+
+    .auth-switch a.active {
+      border-color: #333;
+      font-weight: 600;
+    }
+
+    .auth-form {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .auth-form input,
+    .auth-form select {
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      outline: none;
+    }
+
+    .auth-form button {
+      padding: 12px;
+      border: 0;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .auth-msg {
+      margin: 6px 0 0;
+      font-size: 14px;
+    }
+
+    .two-col {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+
+    @media(max-width:520px) {
+      .two-col {
+        grid-template-columns: 1fr;
+      }
+    }
   </style>
 </head>
 
@@ -63,8 +131,9 @@
 
   <div id="app-footer"></div>
 
-<script src="../assets/dist/js/auth-header.js"></script>
-<script src="../assets/dist/js/layout-auth.js"></script>
-<script src="../assets/dist/js/auth-page.js"></script>
+  <script src="../assets/dist/js/auth-header.js"></script>
+  <script src="../assets/dist/js/layout-auth.js"></script>
+  <script src="../assets/dist/js/auth-page.js"></script>
 </body>
+
 </html>
